[project]
name = "kitsune"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Adams",email = "tim.adams@scai.fraunhofer.de"},
    {name = "Mehmet Can Ay", email="mehmet.ay@scai.fraunhofer.de"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
starlette = "^0.37.2"
datastew = "^0.4.2"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
